# agentos-railway

./: README.md  compose.yaml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: validate.yml
agents/: deep_knowledge_agent.py  reasoning_research_agent.py  self_learning_research_agent.py
agents/sql/: load_f1_data.py  load_sql_knowledge.py  sql_agent.py
app/: config.yaml  main.py
scripts/: build_image.bat  build_image.sh  railway_up.bat  railway_up.sh
